20081129 configure.in: also set CXXFLAGS for --with-local-prefix (fixes bug
         #2358508) (Fred).
20081129 Makefile.am,audio2tape.cc,configure.in,
         converter/{romloader.cc,romloaderstate.cc,romloaderstate.h},
         importer/{interpolator.h,soundfile.cc}: add warnings for C++ and clean
         up warnings thus produced (Fred).
20081129 configure.in,man/{audio2tape.1,createhdf.1,fuse-utils.1,listbasic.1,
	 profile2map.1,raw2hdf.1,rzxcheck.1,rzxdump.1,rzxtool.1,scl2trd.1,
	 snap2tzx.1,snapconv.1,tape2wav.1,tapeconv.1,tzxlist.1},README: final
	 tweaks for 0.10.0 (fuse-utils_0_10_0-branch).
20081203 configure.in,converter/romloader.cc,hacking/ChangeLog,man/{
	 audio2tape.1,createhdf.1,fuse-utils.1,listbasic.1,profile2map.1,
	 raw2hdf.1,rzxcheck.1,rzxdump.1,rzxtool.1,scl2trd.1,snap2tzx.1,
	 snapconv.1,tape2wav.1,tapeconv.1,tzxlist.1},README: merge
	 fuse-utils_0_10_0-branch changes onto trunk.
20081205 Makefile.am: distribute converter/romloaderstate.h (thanks, Chris
         Young) (Fred).
20081206 Makefile.am: distribute the rest of converter/*.h and interpolator/*.h
         (thanks, Lucuan Langa) (Fred).
20081206 Makefile.am,configure.in: distribute importer/trigger.h, fix
         compilation when audiofile isn't present (Fred, sigh).
20081210 ChangeLog,configure.in,hacking/cvs-tags,man/{audio2tape.1,createhdf.1,
	 fuse-utils.1,listbasic.1,profile2map.1,raw2hdf.1,rzxcheck.1,rzxdump.1,
	 rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tape2wav.1,tapeconv.1,
	 tzxlist.1},README: update for 0.10.0.1 release.
20090203 man/audio2tape.1: correct documentation of default trigger (Fred).
20090411 tape2wav.c: use the new tape flag for end of tape (part of fixes for
         bug #2743838) (Fred).
20090803 Makefile.am,compat.h,compat/amiga/{Makefile.am,osname.c},
         compat/unix/{Makefile.am,osname.c},configure.in,snap2tzx.c,utils.c:
         add OS compatibility stubs ala Fuse (patch #2315512) (Chris Young &
         Fred).